cmake_minimum_required(VERSION 3.21)
project(ZOOprojekt2022)

set(CMAKE_CXX_STANDARD 14)

add_executable(ZOOprojekt2022 main.cpp Item.cpp Item.h Inventory.cpp Inventory.h Warrior.cpp Warrior.h Monster.cpp Monster.h Trap.cpp Trap.h Tile.cpp Tile.h Map.cpp Map.h Corridor.cpp Corridor.h Room.cpp Room.h Dungeon.cpp Dungeon.h Menu.cpp Menu.h Position.cpp Position.h)
